# evennia-shards

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  runtests.py
.claude/: settings.json
DESIGN/: INDEX.md  consumer-constraints.md  cross-shard-message-bus.md  deployment-topology.md  documentation-structure.md  evennia-upgrade-checklist.md  library-integration-risks.md  library-scope-and-mandates.md  open-questions.md  progress.md  shard-aware-search.md  shard-isolation.md  shard-settings.md  tenancy.md  testing-setup.md  ticket-auth-flow.md
DESIGN/archive/: shard-isolation.md
DESIGN/drafts/: open-questions.md
DESIGN/test-history/: test_results_1_2026-04-28.md  test_results_2_2026-04-28.md  test_results_3_2026-04-28.md
docs/: INDEX.md  consumer-constraints.md  cross-shard-message-bus.md  deployment-topology.md  documentation-structure.md  library-integration-risks.md  library-scope-and-mandates.md  progress.md  shard-settings.md  ticket-auth-flow.md
docs/archive/: evennia-shards-HANDOVER.md
docs/test-history/: test_results_0_2026-04-28.md  test_results_4_2026-05-21_evennia_suite.md
evennia_shards/: __init__.py  apps.py  chargen.py  commands.py  config.py  errors.py  handoff.py  hooks.py  isolation.py  messagebus.py  messaging.py  middleware.py  models.py  portal_services.py  protocols.py  tests.py  tickets.py
evennia_shards/migrations/: 0001_add_shard_id_to_objectdb.py  0002_message.py  0004_ticket_client_ip.py
examples/: README.md
tests/: evennia_suite_monolith.py  evennia_suite_router.py  evennia_suite_shard.py  test_settings.py
(+45 files in other folders)
